# Log-Sentiment-Analysis

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  llm-log.sql  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/crud/: conversation.py  knowledge_base.py  logs.py  machine.py  messages.py  processed_log.py
backend/app/models/: __init__.py  conversation.py  knowledge_base.py  logs.py  machine.py  messages.py  processed_log.py
backend/app/routers/: __init__.py  chat_page.py  error_page.py  process_log.py  (+1 more)
backend/test/: test_chat_page.py  test_error_page.py  test_knowledge_base_page.py
guides/: setup_ollama_uptime.md
llm-log-web/: .dockerignore  Dockerfile  package-lock.json  package.json  tsconfig.json
sentiment/: Dockerfile  README.md  csv_to_database.py  llm_sentiment_api.py  llm_sentiment_test.py  main.py  main_db.py  main_test.py  pyproject.toml  requester_batch.py  requestor.py  requirements.txt  text_to_csv.py  wait-for-ollama.sh
sentiment/example_logs/: cleaned_output.csv
sentiment/experiments_sentiment/: speed.md
sentiment/utils/: create_folders.py  logs_to_csv.py  process_logs.py
sh-scripts/: README.md
sh-scripts/GenCredentials/: createCredentials.ps1
sh-scripts/network_to_local/: transfer.ps1
sh-scripts/remove_older_files/: removal.ps1
sh-scripts/transfer_script/: transfer.ps1
solution_finding/: Dockerfile  README.md  document_splits.pkl  llm_rag.py  llm_rag_api.py  pyproject.toml  requirements.txt  test.py  wait-for-ollama.sh
solution_finding/faiss/: index.faiss  index.pkl
(+16 files in other folders)
