[project]
name = "sentiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "langchain>=0.3.25",
    "langchain-ollama>=0.3.3",
    "pandas>=2.3.0",
    "pydantic>=2.11.5",
    "requests>=2.32.3",
    "uvicorn>=0.34.3",
]
